[package]
name = "broadcast"
version = "0.1.0"
authors = ["Anton Sapunov <fort.sav.28@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = { version = "4.0.0-beta.1", features = ["rustls"] }
parking_lot = { version = "0.11", features = ["serde"]}
anyhow = "1.0.38"
futures = "0.3"
